# optirad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
apps/: CMakeLists.txt
apps/optirad_cli/: CMakeLists.txt  main.cpp
apps/optirad_gui/: CMakeLists.txt  main.cpp
docs/: acknowledgments.md  architecture.md  core.md  dose.md  geometry.md  gui.md  io.md  optimization.md  phsp.md  segmentation.md  sequencing.md  steering.md  utils.md
scripts/: setup_gui.sh
src/: CMakeLists.txt
src/core/: Aperture.hpp  Beam.cpp  Beam.hpp  CMakeLists.txt  FluenceMap.hpp  Machine.cpp  Machine.hpp  Patient.cpp  Patient.hpp  PatientData.cpp  PatientData.hpp  Plan.cpp  Plan.hpp  Ray.hpp  Stf.cpp  Stf.hpp  StfProperties.hpp
src/core/workflow/: CMakeLists.txt  DoseCalculationPipeline.cpp  DoseCalculationPipeline.hpp  LeafSequencingPipeline.cpp  LeafSequencingPipeline.hpp  OptimizationPipeline.cpp  OptimizationPipeline.hpp  PhaseSpaceBuilder.cpp  PhaseSpaceBuilder.hpp  PlanAnalysis.cpp  PlanAnalysis.hpp  PlanBuilder.cpp  PlanBuilder.hpp  WorkflowState.hpp
src/dose/: CMakeLists.txt  DijSerializer.cpp  DijSerializer.hpp  DoseCalcOptions.hpp  DoseEngineFactory.cpp  DoseEngineFactory.hpp  DoseInfluenceMatrix.cpp  DoseInfluenceMatrix.hpp  DoseManager.hpp  DoseMatrix.cpp  DoseMatrix.hpp  DoseStore.hpp  FFT2D.hpp  GridInterpolant2D.hpp  IDoseEngine.hpp  PlanAnalysis.cpp  PlanAnalysis.hpp  RadDepthCalculator.cpp  RadDepthCalculator.hpp  SSDCalculator.cpp  SSDCalculator.hpp  SiddonRayTracer.cpp  SiddonRayTracer.hpp
src/dose/engines/: PencilBeamEngine.cpp  PencilBeamEngine.hpp
src/geometry/: CMakeLists.txt  CoordinateSystem.cpp  CoordinateSystem.hpp  Grid.cpp  Grid.hpp  MathUtils.hpp  Structure.cpp  Structure.hpp  StructureSet.cpp  StructureSet.hpp  Volume.cpp  Volume.hpp  VoxelDilation.hpp
src/gui/: AppState.hpp  Application.cpp  Application.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  Theme.cpp  Theme.hpp  Window.cpp  Window.hpp  stb_image_impl.cpp
src/gui/panels/: BeamPanel.cpp  BeamPanel.hpp  DVHPanel.cpp  DVHPanel.hpp  DoseColors.hpp  DoseStatsPanel.cpp  DoseStatsPanel.hpp  IPanel.hpp  LeafSequencingPanel.cpp  LeafSequencingPanel.hpp  LogPanel.cpp  LogPanel.hpp  OptimizationPanel.cpp  OptimizationPanel.hpp  PatientPanel.cpp  PatientPanel.hpp  PhaseSpacePanel.cpp  PhaseSpacePanel.hpp  PlanningPanel.cpp  PlanningPanel.hpp  StfPanel.cpp  StfPanel.hpp
src/gui/views/: BevView.cpp  BevView.hpp  DVHView.cpp  DVHView.hpp  IView.hpp  SliceView.cpp  SliceView.hpp  View3D.cpp  View3D.hpp
src/gui/views/renderers/: AxisLabels.cpp  AxisLabels.hpp  BeamRenderer.cpp  BeamRenderer.hpp  CubeRenderer.cpp  CubeRenderer.hpp  MarchingCubesTables.hpp  PhaseSpaceRenderer.cpp  PhaseSpaceRenderer.hpp  StructureRenderer.cpp  StructureRenderer.hpp  VolumeRenderer.cpp  VolumeRenderer.hpp
src/io/: CMakeLists.txt  DicomExporter.cpp  DicomExporter.hpp  DicomImporter.cpp  DicomImporter.hpp  IDataExporter.hpp  IDataImporter.hpp  MachineLoader.cpp  MachineLoader.hpp  RTStructParser.cpp  RTStructParser.hpp
src/optimization/: CMakeLists.txt  Constraint.cpp  Constraint.hpp  IOptimizer.hpp  ObjectiveBuilder.cpp  ObjectiveBuilder.hpp  ObjectiveFunction.cpp  ObjectiveFunction.hpp  ObjectiveProtocol.hpp  OptimizerFactory.cpp  OptimizerFactory.hpp
src/optimization/objectives/: DVHObjective.cpp  DVHObjective.hpp  SquaredDeviation.cpp  SquaredDeviation.hpp  SquaredOverdose.cpp  SquaredOverdose.hpp  SquaredUnderdose.cpp  SquaredUnderdose.hpp
src/optimization/optimizers/: LBFGSOptimizer.cpp  LBFGSOptimizer.hpp
src/phsp/: CMakeLists.txt  IAEAHeaderParser.cpp  IAEAHeaderParser.hpp  IAEAPhspReader.cpp  IAEAPhspReader.hpp  PhaseSpaceBeamSource.cpp  PhaseSpaceBeamSource.hpp  PhaseSpaceData.cpp  PhaseSpaceData.hpp
src/segmentation/: BodyContourGenerator.cpp  BodyContourGenerator.hpp  CMakeLists.txt
src/sequencing/: CMakeLists.txt  DeliverableDoseCalculator.cpp  DeliverableDoseCalculator.hpp  LeafSequencer.cpp  LeafSequencer.hpp
src/steering/: CMakeLists.txt  IStfGenerator.hpp  PhotonIMRTStfGenerator.hpp  StfProperties.hpp
src/utils/: CMakeLists.txt  Config.cpp  Config.hpp  Interpolation.cpp  Interpolation.hpp  Logger.cpp  Logger.hpp  MathUtils.cpp  MathUtils.hpp  Timer.cpp  Timer.hpp
tests/: CMakeLists.txt
tests/core/: test_beam.cpp  test_patient.cpp  test_plan.cpp  test_ray.cpp
tests/dose/: test_dij_serializer.cpp  test_dose_engine.cpp  test_dose_influence_matrix.cpp  test_fft2d.cpp  test_grid_interpolant2d.cpp  test_rad_depth_calculator.cpp  test_siddon_ray_tracer.cpp  test_ssd_calculator.cpp
tests/geometry/: test_coordinate_system.cpp  test_grid.cpp  test_indexing.cpp  test_volume.cpp  test_voxel_dilation.cpp
tests/io/: test_dicom_importer.cpp  test_machine_loader.cpp
tests/optimization/: test_lbfgs_optimizer.cpp
tests/phsp/: test_iaea_header_parser.cpp  test_iaea_phsp_reader.cpp  test_phase_space_beam_source.cpp  test_phase_space_data.cpp
tests/segmentation/: test_body_contour_generator.cpp
tests/steering/: test_photon_imrt_stf_generator.cpp
tests/utils/: test_logger.cpp  test_mathutils.cpp
